--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && node build-extension.js",
     "start": "next start",
     "lint": "eslint"
   },
@@ -22,8 +22,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cheerio": "^1.1.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "fs-extra": "^11.3.2",
+    "glob": "^13.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
